gl51-master/src/test/deca/context/invalid/testObject_rule3_43.deca
//Description
//On peut pas faire super

class A {
    void x(){
        this.super.super.this;
    }
}